<resources>
    <string name="app_name">eWalletRegister</string>
    <string name="name">名前</string>
    <string name="admin_register">管理者登録</string>
    <string name="admin_sign_in">管理者ログイン</string>
    <string name="sign_in">ログイン</string>
    <string name="sign_up">ユーザー新規登録</string>
    <string name="create_password">パスワード作成</string>
    <string name="password">パスワード</string>
    <string name="register">登録</string>
    <string name="balance">残高：%d円</string>
    <string name="all_users">ユーザー一覧</string>
    <string name="admin">管理者 %s 様</string>
    <string name="user_name">ユーザー名：%s</string>
    <string name="user_id">ユーザーID：\n%s</string>
    <string name="erase">削除</string>
    <string name="change_balance">残高変更</string>
    <string name="product_name">商品名</string>
    <string name="product_price">値段</string>
    <string name="new_balance">残高を入力</string>
    <string name="add_product">商品追加</string>
    <string name="all_product">商品一覧</string>
    <string name="purchase_product_name">商品名：%s</string>
    <string name="purchase_product_price">値段：%d 円</string>
    <string name="logout">ログアウト</string>
    <string name="purchase">購入</string>
    <string name="charge_balance">チャージ</string>
    <string name="cancel">キャンセル</string>
    <string name="purchase_result">合計： %d 円</string>
    <string name="reset">リセット</string>
    <string name="charge_text">チャージする金額を選んでください。</string>
    <string name="charge_result">チャージ合計： %d 円</string>
    <string name="add_1000">+ 1000円</string>
    <string name="add_3000">+ 3000円</string>
    <string name="add_5000">+ 5000円</string>
    <string name="add_10000">+ 10000円</string>
    <string name="scan_text">図のようにタッチしてください</string>
    <string name="data_backup">データのバックアップ</string>
</resources>