<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="chargeBalanceViewModel"
            type="com.nokopi.marketregistersystem.user.ChargeBalanceViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chargeText"
            android:text="@string/charge_text"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add1000"
            android:text="@string/add_1000"
            app:layout_constraintTop_toBottomOf="@id/chargeText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{() -> chargeBalanceViewModel.addCharge(1000)}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add3000"
            android:text="@string/add_3000"
            app:layout_constraintTop_toBottomOf="@id/add1000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{() -> chargeBalanceViewModel.addCharge(3000)}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add5000"
            android:text="@string/add_5000"
            app:layout_constraintTop_toBottomOf="@id/add3000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{() -> chargeBalanceViewModel.addCharge(5000)}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add10000"
            android:text="@string/add_10000"
            app:layout_constraintTop_toBottomOf="@id/add5000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{() -> chargeBalanceViewModel.addCharge(10000)}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/purchaseResult"
            android:text="@{@string/charge_result(chargeBalanceViewModel.chargeResult)}"
            android:layout_marginBottom="3dp"
            tools:text="@string/charge_result"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/resetBtn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancelBtn"
            android:text="@string/cancel"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/resetBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> chargeBalanceViewModel.finishCharge()}"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resetBtn"
            android:text="@string/reset"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintLeft_toRightOf="@id/cancelBtn"
            app:layout_constraintRight_toLeftOf="@id/chargeBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> chargeBalanceViewModel.reset()}"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/chargeBtn"
            android:text="@string/charge_balance"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintLeft_toRightOf="@id/resetBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> chargeBalanceViewModel.canCharge()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>