<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userInfoViewModel"
            type="com.nokopi.marketregistersystem.admin.UserInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userInfoLL"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:id="@+id/userInfoName"
                android:textSize="20sp"
                android:text="@{@string/user_name(userInfoViewModel.userInfoName)}"
                tools:text="@string/user_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:id="@+id/userInfoId"
                android:textSize="20sp"
                android:text="@{@string/user_id(userInfoViewModel.userInfoId)}"
                tools:text="@string/user_id" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:id="@+id/userInfoBalance"
                android:textSize="20sp"
                android:text="@{@string/balance(userInfoViewModel.userInfoBalance)}"
                tools:text="@string/balance" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userEraseBtn"
            android:text="@string/erase"
            app:layout_constraintTop_toBottomOf="@id/userInfoLL"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/changeBalanceBtn"
            android:onClick="@{() -> userInfoViewModel.onClickErase()}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeBalanceBtn"
            android:text="@string/change_balance"
            app:layout_constraintTop_toBottomOf="@id/userInfoLL"
            app:layout_constraintLeft_toRightOf="@id/userEraseBtn"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{() -> userInfoViewModel.onClickChangeBalance()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>