<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="purchaseViewModel"
            type="com.nokopi.marketregistersystem.user.PurchaseViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/recyclerView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/purchaseResult"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/purchaseResult"
            android:text="@{@string/purchase_result(purchaseViewModel.purchaseResult)}"
            tools:text="@string/purchase_result"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/resetBtn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancelBtn"
            android:text="@string/cancel"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/resetBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> purchaseViewModel.finishPurchase()}"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resetBtn"
            android:text="@string/reset"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintLeft_toRightOf="@id/cancelBtn"
            app:layout_constraintRight_toLeftOf="@id/purchaseBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> purchaseViewModel.reset()}"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/purchaseBtn"
            android:text="@string/purchase"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintLeft_toRightOf="@id/resetBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> purchaseViewModel.isAbleToPurchase()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>