<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userViewModel"
            type="com.nokopi.marketregistersystem.user.UserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="7dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/userName"
                    android:text="@{@string/user_name(userViewModel.userName)}"
                    android:textSize="30sp"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    tools:text="@string/user_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nowBalance"
                    android:text="@{@string/balance(userViewModel.balance)}"
                    android:textSize="30sp"
                    tools:text="@string/balance" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"/>

        <Button
            android:id="@+id/purchaseBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/purchase"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/chargeBalanceBtn"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{() -> userViewModel.goPurchase()}"/>

        <Button
            android:id="@+id/chargeBalanceBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/charge_balance"
            android:layout_marginHorizontal="3dp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/purchaseBtn"
            android:onClick="@{() -> userViewModel.goCharge()}"/>

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> userViewModel.logout()}"
            android:text="@string/logout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>